feat: GdnNetwork class for forward passes

--- a/mypy.ini
+++ b/mypy.ini
@@ -127,3 +127,9 @@ ignore_missing_imports = True
 
 [mypy-networkx.*]
 ignore_missing_imports = True
+
+[mypy-haiku.*]
+ignore_missing_imports = True
+
+[mypy-jraph.*]
+ignore_missing_imports = True
