fix: linting errors removed.

--- a/mypy.ini
+++ b/mypy.ini
@@ -127,3 +127,6 @@ ignore_missing_imports = True
 
 [mypy-networkx.*]
 ignore_missing_imports = True
+
+[mypy-distrax.*]
+ignore_missing_imports = True
