--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,10 @@ jobs:
       run: |
         docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
+    - name: Set code coverage env variable
+      run: |
+        ci_env=`bash <(curl -s https://codecov.io/env)`
     - name: Run tests in docker
       run: |
         docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v2
