--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,9 @@ jobs:
       run: |
         docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
-    - name: Set code coverage env variable
-      env:
-        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+    # - name: Set code coverage env variable
+    #   env:
+    #     CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
       # run: |
       #   ci_env=`bash <(curl -s https://codecov.io/env)`
     - name: Run tests in docker
