--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,24 +22,8 @@ jobs:
       run: |
         docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
-    # - name: Set code coverage env variable
-    #   env:
-    #     CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-      # run: |
-      #   ci_env=`bash <(curl -s https://codecov.io/env)`
     - name: Run tests in docker
-      # run: |
-      #   docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
-      #       -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
       run: |
-        docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+        ci_env=`bash <(curl -s https://codecov.io/env)`
+        docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
-
-    - name: Upload reports to codecov
-      env:
-        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-      run: |
-       curl -Os https://uploader.codecov.io/latest/linux/codecov
-       find . -iregex "codecov.*"
-       chmod +x codecov
-       ./codecov -t ${CODECOV_TOKEN}
