--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,11 +2,10 @@ name: format_and_test
 
 on:
   push:
-    branches: [develop, feature/jax-systems]
+    branches: [develop]
   pull_request:
-    branches: [develop, feature/jax-systems]
+    branches: [develop]
 
-# TODO(Kale-ab) Specify mava container to run tests on.
 jobs:
   test-ubuntu:
     runs-on: ubuntu-latest
@@ -15,6 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         docker-image: ["python:3.7","python:3.8","python:3.9"]
+    credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - name: Checkout mava
       uses: actions/checkout@v2
@@ -24,6 +26,6 @@ jobs:
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
     - name: Run tests in docker
       run: |
-        ci_env=`bash <(curl -s https://codecov.io/env)`
-        docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+        docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
+      uses: codecov/codecov-action@v2
