--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,6 @@ jobs:
       fail-fast: false
       matrix:
         docker-image: ["python:3.7","python:3.8","python:3.9"]
-    credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - name: Checkout mava
       uses: actions/checkout@v2
@@ -26,6 +23,6 @@ jobs:
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
     - name: Run tests in docker
       run: |
-        docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+        ci_env=`bash <(curl -s https://codecov.io/env)`
+        docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
             -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
-      uses: codecov/codecov-action@v2
