Update codeowners list

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,7 @@
 
 # Default code owners for repo
 
-* @arnupretorius @KaleabTessera @DriesSmit @mmorris44 @AsadJeewa @RuanJohn @jcformanek @siddarthsingh1 @sash-a
+* @arnupretorius @KaleabTessera @DriesSmit @AsadJeewa @RuanJohn @jcformanek @siddarthsingh1 @sash-a @OmaymaMahjoub @ulricharmel
 
 # Add specific code owners for certain files or folders below
 
