--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,20 +9,21 @@ on:
 jobs:
   test-ubuntu:
     runs-on: ubuntu-latest
+    container: instadeepct/mava:jax-core-latest
     timeout-minutes: 45
     strategy:
       fail-fast: false
       matrix:
-        docker-image: ["python:3.7","python:3.8","python:3.9"]
+        docker-image: ["python:3.7", "python:3.8", "python:3.9"]
     steps:
-    - name: Checkout mava
-      uses: actions/checkout@v2
-    - name: Check format and types
-      run: |
-        docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
-            -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
-    - name: Run tests in docker
-      run: |
-        ci_env=`bash <(curl -s https://codecov.io/env)`
-        docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
-            -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
+      - name: Checkout mava
+        uses: actions/checkout@v2
+      - name: Check format and types
+        run: |
+          docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+              -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
+      - name: Run tests in docker
+        run: |
+          ci_env=`bash <(curl -s https://codecov.io/env)`
+          docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+              -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
