--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,3 +24,10 @@ jobs:
       - name: Run tests in docker
         run: |
           ./bash_scripts/tests.sh
+      - name: Code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          env_vars: OS,PYTHON
+          fail_ci_if_error: true
+          files: ./coverage.xml
+          flags: unittests
