--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,6 @@ on:
 jobs:
   test-ubuntu:
     runs-on: ubuntu-latest
-    container: instadeepct/mava:jax-core-latest
     timeout-minutes: 45
     strategy:
       fail-fast: false
@@ -20,11 +19,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Check format and types
         run: |
-          ./bash_scripts/check_format.sh
+          docker run --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+              -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/check_format.sh
       - name: Run tests in docker
         run: |
-          ./bash_scripts/tests.sh
-      - name: Code coverage
+          ci_env=`bash <(curl -s https://codecov.io/env)`
+          docker run $ci_env -e CI=true --mount "type=bind,src=$(pwd),dst=/tmp/mava" \
+              -w "/tmp/mava" --rm ${{ matrix.docker-image }} /bin/bash bash_scripts/tests.sh
+      - name: Upload Code coverage
         uses: codecov/codecov-action@v3
         with:
           env_vars: OS,PYTHON
