--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -9,3 +9,12 @@ coverage:
         base: auto
         branch:
           - develop
+    patch:
+      default:
+        # basic
+        target: auto
+        # Only fail PR, if codecov drops by 1%.
+        threshold: 1%
+        base: auto
+        branch:
+          - develop
