--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -2,19 +2,13 @@ coverage:
   status:
     project:
       default:
-        # basic
         target: auto
-        # Only fail PR, if codecov drops by 1%.
-        threshold: 1%
+        # Only fail PR, if overall project codecov drops by 0.5%.
+        threshold: 0.5%
         base: auto
         branch:
           - develop
     patch:
       default:
-        # basic
-        target: auto
-        # Only fail PR, if codecov drops by 1%.
-        threshold: 1%
-        base: auto
-        branch:
-          - develop
+        # New code, should have 80% code coverage.
+        target: 80%
