chore: Update codecov.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -4,7 +4,7 @@ coverage:
       default:
         # Only fail PR, if overall project codecov drops by 1%.
         threshold: 1%
-        base: auto
+        target: auto
 
     patch:
       default:
