--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -4,38 +4,32 @@ on:
   push:
     branches: [develop]
   pull_request:
-    types: [ labeled ]
-
+    types: [labeled]
 
 jobs:
   # Action pushes new docker image if we merge into dev
   build-push-develop:
-    if:  ${{ github.ref == 'refs/heads/develop' }}
+    if: ${{ github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Set docker repo vars
         id: vars2
         run: echo "::set-output name=docker_repo::instadeepct/mava"
 
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      -
-        name: Build and push jax-core
+      - name: Build and push jax-core
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -43,8 +37,7 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:jax-core-latest
           target: jax-core
 
-      -
-        name: Build and push pz
+      - name: Build and push pz
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -52,8 +45,7 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:pz-latest
           target: pz
 
-      -
-        name: Build and push sc2
+      - name: Build and push sc2
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -61,9 +53,7 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:sc2-latest
           target: sc2
 
-
-      -
-        name: Build and push flatland
+      - name: Build and push flatland
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -71,14 +61,12 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:flatland-latest
           target: flatland
 
-
   # Action pushes new docker image if we have a PR to dev and have the label benchmark
   build-push-branches:
-    if:  ${{ github.event.label.name == 'benchmark required' }}
+    if: ${{ github.event.label.name == 'benchmark required' }}
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           # Check out pull request's HEAD commit
@@ -86,11 +74,9 @@ jobs:
           # https://github.com/actions/checkout/issues/299.
           ref: ${{ github.event.pull_request.head.sha }}
 
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Set sha vars
@@ -101,15 +87,13 @@ jobs:
         id: vars2
         run: echo "::set-output name=docker_repo::instadeepct/mava"
 
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      -
-        name: Build and push jax-core
+      - name: Build and push jax-core
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -117,8 +101,7 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:jax-core-${{ steps.vars.outputs.sha_short }}
           target: jax-core
 
-      -
-        name: Build and push pz
+      - name: Build and push pz
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -126,8 +109,7 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:pz-${{ steps.vars.outputs.sha_short }}
           target: pz
 
-      -
-        name: Build and push sc2
+      - name: Build and push sc2
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -135,11 +117,50 @@ jobs:
           tags: ${{ steps.vars2.outputs.docker_repo }}:sc2-${{ steps.vars.outputs.sha_short }}
           target: sc2
 
-      -
-        name: Build and push flatland
+      - name: Build and push flatland
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: ${{ steps.vars2.outputs.docker_repo }}:flatland-${{ steps.vars.outputs.sha_short }}
           target: flatland
+
+  # Mava Edu - Action pushes new docker image if we have a PR to dev and have the label benchmark
+  build-push-edu:
+    if: ${{ github.event.label.name == 'educational benchmark required' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          # Check out pull request's HEAD commit
+          # For more details, see:
+          # https://github.com/actions/checkout/issues/299.
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set sha vars
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
+      - name: Set docker repo vars
+        id: vars2
+        run: echo "::set-output name=docker_repo::instadeepct/mava"
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push mava-edu
+        uses: docker/build-push-action@v2
+        with:
+          context: educational
+          push: true
+          tags: ${{ steps.vars2.outputs.docker_repo }}:mava-edu-${{ steps.vars.outputs.sha_short }}
+          target: mava-edu
