--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,12 @@ mava/bin
 mava/lib64
 mava/pyvenv.cfg
 mava/share
+mava/include
+mava_edu/bin
+mava_edu/lib64
+mava_edu/pyvenv.cfg
+mava_edu/share
+mava_edu/include
 train_loop
 eval_loop
 NULL
