chore: pre-commit

--- a/mypy.ini
+++ b/mypy.ini
@@ -133,3 +133,6 @@ ignore_missing_imports = True
 
 [mypy-tensorflow_io.*]
 ignore_missing_imports = True
+
+[mypy-distrax.*]
+ignore_missing_imports = True
