--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
       - id: debug-statements
       - id: mixed-line-ending
       - id: check-yaml
+      - id: check-toml
 
   - repo: https://github.com/psf/black
     rev: 22.3.0
