fix: cleaning the code

--- a/jax_distribution/configs/default.yaml
+++ b/jax_distribution/configs/default.yaml
@@ -1,5 +1,13 @@
-LR: 5e-3
+# --- Defaults ---
+
+# --- Experiment params ---
 ENV_NAME: RobotWarehouse-v0  # [RobotWarehouse-v0, MultiCVRP-v0]
+BATCH_SIZE: 4  # Parallel updates / environments
+TOTAL_TIMESTEPS: 204800  # Number of training timesteps
+SEED: 42
+
+# --- RL hyperparameters ---
+LR: 5e-3
 ACTIVATION: relu
 UPDATE_EPOCHS: 1
 NUM_MINIBATCHES: 1
@@ -9,9 +17,8 @@ CLIP_EPS: 0.2
 ENT_COEF: 0.01
 VF_COEF: 0.5
 MAX_GRAD_NORM: 0.5
-BATCH_SIZE: 4  # Parallel updates / environments
 ROLLOUT_LENGTH: 128  # Length of each rollout
-TOTAL_TIMESTEPS: 204800  # Number of training timesteps
-SEED: 42
+
+# --- Logging options ---
 USE_TF: true
 USE_SACRED: true
