chore: application import name and commitlint config

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ exclude =
 max-line-length=100
 max-cognitive-complexity=10
 import-order-style = google
-application-import-names = jumanji
+application-import-names = mava
 doctests = True
 docstring-convention = google
 per-file-ignores = __init__.py:F401
