--- a/jax_distribution/configs/default.yaml
+++ b/jax_distribution/configs/default.yaml
@@ -12,6 +12,9 @@ num_envs: 16  # Number of vectorised environments per device.
 num_updates: 10 # Number of updates
 seed: 42
 
+# --- Agent observations ---
+add_agent_id: True
+
 # --- RL hyperparameters ---
 lr: 2.5e-4 # Leanring rate for network
 update_batch_size: 2 # Number of vectorised gradient updates per device.
