chore: added task names to configs and created standard experiment names

--- a/jax_distribution/configs/default.yaml
+++ b/jax_distribution/configs/default.yaml
@@ -38,3 +38,4 @@ absolute_metric: True # Whether the absolute metric should be computed. For more
 # --- Logging options ---
 use_tf: true
 use_sacred: true
+base_exp_path: sacred
