--- a/jax_distribution/configs/rware_scenario/tiny-2ag.yaml
+++ b/jax_distribution/configs/rware_scenario/tiny-2ag.yaml
@@ -1,7 +1,10 @@
 # The config of the tiny-2ag environment
-column_height: 8
-shelf_rows: 1
-shelf_columns: 3
-num_agents: 2
-sensor_range: 1
-request_queue_size: 2
+task_name: tiny-2ag
+
+task_config:
+  column_height: 8
+  shelf_rows: 1
+  shelf_columns: 3
+  num_agents: 2
+  sensor_range: 1
+  request_queue_size: 2
