--- a/jax_distribution/configs/rware_scenario/tiny-4ag.yaml
+++ b/jax_distribution/configs/rware_scenario/tiny-4ag.yaml
@@ -1,7 +1,10 @@
 # The config of the tiny_4ag environment
-column_height: 8
-shelf_rows: 1
-shelf_columns: 3
-num_agents: 4
-sensor_range: 1
-request_queue_size: 4
+task_name: tiny-4ag
+
+task_config:
+  column_height: 8
+  shelf_rows: 1
+  shelf_columns: 3
+  num_agents: 4
+  sensor_range: 1
+  request_queue_size: 4
