--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,9 @@
 distrax
 flax==0.6.11
+git+https://github.com/instadeepai/jumanji.git@main
 hydra-core==1.3.2
 jax<=0.4.13
 jaxlib<=0.4.13
-jumanji
 numpy
 omegaconf
 optax
