--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,7 +3,7 @@ flax==0.6.11
 hydra-core==1.3.2
 jax<=0.4.13
 jaxlib<=0.4.13
-jumanji
+jumanji @ git+https://github.com/instadeepai/jumanji@main#egg=jumanji
 numpy
 omegaconf
 optax
