fix: minor fixes based on the review

--- a/mava/configs/default.yaml
+++ b/mava/configs/default.yaml
@@ -3,7 +3,7 @@
 # --- Experiment params ---
 defaults:
   - _self_
-  - rware_scenario: tiny-2ag
+  - rware_scenario: tiny-4ag-easy
 
 # --- Environment ---
 env_name: RobotWarehouse-v0
