--- a/mava/configs/default.yaml
+++ b/mava/configs/default.yaml
@@ -46,5 +46,6 @@ base_exp_path: results
 system_name: ~  # this is manually set inside each file depending on which system is run
 # Neptune logging
 use_neptune: False
+neptune_project: Instadeep/Mava
 neptune_tag: [rware]
 name: None # Unique ID from logging.
