fix: update config

--- a/mava/configs/default.yaml
+++ b/mava/configs/default.yaml
@@ -45,6 +45,7 @@ use_sacred: True
 base_exp_path: results
 system_name: ~  # this is manually set inside each file depending on which system is run
 # Neptune logging
-use_neptune: True
-neptune_tag: [rware,rlax-bench,loss+gae]
+use_neptune: False
+neptune_project: Instadeep/Mava
+neptune_tag: [rlax]
 name: None # Unique ID from logging.
