--- a/mava/configs/default.yaml
+++ b/mava/configs/default.yaml
@@ -19,7 +19,7 @@ add_agent_id: True
 actor_lr: 2.5e-4 # Learning rate for actor network
 critic_lr: 2.5e-4 # Learning rate for critic network
 update_batch_size: 2 # Number of vectorised gradient updates per device.
-rollout_length: 128 # Number of environment steps per vectorised environment.
+rollout_length: 140 # Number of environment steps per vectorised environment.
 
 ppo_epochs: 4 # Number of ppo epochs per training data batch.
 num_minibatches: 2 # Number of minibatches per ppo epoch.
@@ -29,6 +29,7 @@ clip_eps: 0.2 # Clipping value for PPO updates and value function.
 ent_coef: 0.01 # Entropy regularisation term for loss function.
 vf_coef: 0.5 # Critic weight in
 max_grad_norm: 0.5 # Maximum norm of the gradients for a weight update.
+recurrent_chunk_size: 10 
 
 # --- Evaluation ---
 num_eval_episodes: 32 # Episodes per evaluation
