--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,7 +4,7 @@ hydra-core==1.3.2
 jax
 jaxlib
 jumanji @ git+https://github.com/instadeepai/jumanji@main#egg=jumanji
-neptune[sacred]
+neptune
 numpy
 omegaconf
 optax
