--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,4 @@
+colorama
 distrax @ git+https://github.com/google-deepmind/distrax  # distrax release doesn't support jax > 0.4.13
 flax==0.6.11
 hydra-core==1.3.2
@@ -9,5 +10,4 @@ numpy
 omegaconf
 optax
 protobuf~=3.20
-sacred
 tensorboard_logger
