--- a/mava/configs/logger/ff_ippo.yaml
+++ b/mava/configs/logger/ff_ippo.yaml
@@ -6,6 +6,4 @@ system_name: ff_ippo
 # --- Neptune options ---
 kwargs:
   neptune_project: Instadeep/Mava
-  # neptune_tag: [ff-ippo, rware]
-  neptune_tag: [delete]
-  name: ff-ippo
+  neptune_tag: [ff-ippo, rware]
