chore: remove sacred from comments logger config

--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -1,7 +1,7 @@
 # --- Logging options ---
 
 use_tf: True # Whether to use tensorboard logging.
-base_exp_path: results # Base path for sacred logging.
+base_exp_path: results # Base path for logging.
 
 # --- Neptune logging ---
 use_neptune: True
