--- a/mava/configs/system/rec_mappo.yaml
+++ b/mava/configs/system/rec_mappo.yaml
@@ -19,4 +19,6 @@ clip_eps: 0.2 # Clipping value for PPO updates and value function.
 ent_coef: 0.01 # Entropy regularisation term for loss function.
 vf_coef: 0.5 # Critic weight in
 max_grad_norm: 0.5 # Maximum norm of the gradients for a weight update.
+
+# --- Recurrent hyperparameters ---
 recurrent_chunk_size: 16 # The size of the chunks in which the recurrent sequences are divided during the training process.
