chore: typo fix

--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -11,5 +11,5 @@ use_neptune: False
 kwargs:
   neptune_project: Instadeep/Mava
   neptune_tag: [rware]
-  json_path: ~ # If set json files will be logged to a set path so that multiple experiments can
+  json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
