--- a/mava/configs/env/lbf.yaml
+++ b/mava/configs/env/lbf.yaml
@@ -1,11 +1,11 @@
 # ---Environment Configs---
 defaults:
   - _self_
-  - lbf_scenario: Foraging-2s-8x8-2p-2f-coop # [Foraging-2s-8x8-2p-2f-coop, Foraging-8x8-2p-2f-coop, Foraging-2s-10x10-3p-3f, Foraging-10x10-3p-3f, Foraging-15x15-4p-3f, Foraging-15x15-4p-5f]
+  - lbf_scenario: 2s-8x8-2p-2f-coop # [2s-8x8-2p-2f-coop, 8x8-2p-2f-coop, 2s-10x10-3p-3f, 10x10-3p-3f, 15x15-4p-3f, 15x15-4p-5f]
 
 env_name: LevelBasedForaging-v0
-task_name: Foraging-2s-8x8-2p-2f-coop
+task_name: 2s-8x8-2p-2f-coop
 # Choose whether to use the use_idividual_reward = True OR aggregate_rewards=True.
-use_idividual_reward: False # If True, the network uses the list of different rewards given.
+use_idividual_reward: False # If True, the network uses the list of different rewards returned of each agent.
 aggregate_rewards : True  # If True, aggregates rewards across agents using the specified function.
 reward_aggregation_function: sum # The function for aggregating rewards ("sum" or "mean").
