--- a/mava/configs/env/lbf_scenario/15x15-4p-5f.yaml
+++ b/mava/configs/env/lbf_scenario/15x15-4p-5f.yaml
@@ -1,9 +1,9 @@
-# The config of the Foraging-15x15-4p-3f scenario
+# The config of the 15x15-4p-5f scenario
 
-task_config_gen:
+task_config:
   grid_size: 15
   fov : 15
   num_agents: 4
-  num_food: 3
+  num_food: 5
   max_agent_level: 2
   force_coop: False
