--- a/mava/configs/env/lbf_scenario/2s-8x8-2p-2f-coop.yaml
+++ b/mava/configs/env/lbf_scenario/2s-8x8-2p-2f-coop.yaml
@@ -1,4 +1,4 @@
-# The config of the Foraging-2s-8x8-2p-2f-coop scenario
+# The config of the 2s-8x8-2p-2f-coop scenario
 
 task_config:
   grid_size: 8
