review: improved variable naming

--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -17,7 +17,8 @@ checkpointing:
     save_interval_steps: 1 # Number of steps between saving checkpoints.
     max_to_keep: 1 # Maximum number of checkpoints to keep.
     keep_period: ~ # Don't delete any checkpoint where step % keep_period == 0
+    checkpoint_uid: ~ # Unique identifier for checkpoint to save. Defaults to timestamp
 
   load_model: False # Whether to load model checkpoints.
   load_args:
-    timestamp_override: "" # Timestamp override for loading checkpoint.
+    checkpoint_uid: "" # Unique identifier for checkpoint to load.
