--- a/mava/configs/env/lbf.yaml
+++ b/mava/configs/env/lbf.yaml
@@ -6,7 +6,6 @@ defaults:
 
 env_name: LevelBasedForaging-v0
 task_name: 2s-8x8-2p-2f-coop
-# Choose whether to use the use_idividual_reward = True OR aggregate_rewards=True.
-use_idividual_reward: False # If True, the network uses the list of different rewards returned of each agent.
+# Choose whether to use the list of idividual reward(default setting) OR aggregate_rewards=True.
 aggregate_rewards : True  # If True, aggregates rewards across agents using the specified function.
 reward_aggregation_function: sum # The function for aggregating rewards ("sum" or "mean").
