--- a/mava/configs/env/lbf_scenario/15x15-4p-3f.yaml
+++ b/mava/configs/env/lbf_scenario/15x15-4p-3f.yaml
@@ -1,4 +1,4 @@
-# The config of the 15x15-4p-3f scenario
+# The config of the 15x15-4p-3f scenario with the VectorObserver set as default
 
 task_config:
   grid_size: 15
@@ -8,6 +8,7 @@ task_config:
   max_agent_level: 2
   force_coop: False
 
+# GridObserver config
 grid_obs_config:
   grid_size: 15
   fov : 15
