--- a/mava/configs/env/lbf_scenario/2s-8x8-2p-2f-coop.yaml
+++ b/mava/configs/env/lbf_scenario/2s-8x8-2p-2f-coop.yaml
@@ -1,4 +1,4 @@
-# The config of the 2s-8x8-2p-2f-coop scenario
+# The config of the 2s-8x8-2p-2f-coop scenario with the VectorObserver set as default.
 
 task_config:
   grid_size: 8 # size of the grid to generate.
@@ -8,6 +8,7 @@ task_config:
   max_agent_level: 2 # maximum level of the agents (inclusive).
   force_coop: True   # force cooperation between agents.
 
+# GridObserver config
 grid_obs_config:
   grid_size: 8
   fov : 2
