--- a/mava/configs/env/rware.yaml
+++ b/mava/configs/env/rware.yaml
@@ -1,7 +1,6 @@
 # ---Environment Configs---
 defaults:
   - _self_
-  - rware_scenario: tiny-2ag # [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
+  - scenario: rware/tiny-2ag # [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
 
 env_name: RobotWarehouse-v0
-task_name: tiny-2ag
