--- a/mava/configs/env/scenario/lbf/15x15-4p-3f.yaml
+++ b/mava/configs/env/scenario/lbf/15x15-4p-3f.yaml
@@ -1,10 +1,11 @@
-# The config of the 15x15-4p-5f scenario with the VectorObserver set as default
+# The config of the 15x15-4p-3f scenario with the VectorObserver set as default
+task_name: 15x15-4p-3f
 
 task_config:
   grid_size: 15
   fov: 15
   num_agents: 4
-  num_food: 5
+  num_food: 3
   max_agent_level: 2
   force_coop: False
 
