--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,7 +4,7 @@ flax==0.6.11
 hydra-core==1.3.2
 jax
 jaxlib
-jumanji @ git+https://github.com/instadeepai/jumanji@main#egg=jumanji
+jumanji @ git+https://github.com/WiemKhlifi/jumanji@feat/lbf-truncate#egg=jumanji
 neptune
 numpy
 omegaconf
