--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,6 +4,7 @@ flax==0.6.11
 hydra-core==1.3.2
 jax
 jaxlib
+jaxmarl
 jumanji @ git+https://github.com/instadeepai/jumanji@main#egg=jumanji
 neptune
 numpy
