--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -4,6 +4,10 @@
 arch_name: "sebulba"
 num_envs: 16  # number of envs per thread
 
+# --- Evaluation ---
+evaluation_greedy: False # Evaluate the policy greedily. If True the policy will select
+  # an action which corresponds to the greatest logit. If false, the policy will sample
+  # from the logits.
 num_eval_episodes: 8 # Number of episodes to evaluate per evaluation.
 num_evaluation: 250 # Number of evenly spaced evaluations to perform during training.
 absolute_metric: True # Whether the absolute metric should be computed. For more details
