--- a/mava/configs/system/rec_mappo.yaml
+++ b/mava/configs/system/rec_mappo.yaml
@@ -5,6 +5,7 @@ seed: 42
 
 # --- Agent observations ---
 add_agent_id: True
+system_name: rec_mappo
 
 # --- RL hyperparameters ---
 actor_lr: 2.5e-4 # Learning rate for actor network
