--- a/mava/configs/logger/rec_ippo.yaml
+++ b/mava/configs/logger/rec_ippo.yaml
@@ -6,4 +6,4 @@ system_name: rec_ippo
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [rec-ippo, smax, benchmark]
+  neptune_tag: [rec-ippo, smax, benchmark, win-rate]
